Corrección posición texto inicioComponent

--- a/src/app/components/inicio/inicio.component.html
+++ b/src/app/components/inicio/inicio.component.html
@@ -119,31 +119,31 @@
         <div class="inicio__cities-grid">
             <a (click)="searchCity('Madrid')"
                 class="inicio__cities-grid-column inicio__cities-grid-madrid text-decoration-none border border-1">
-                <p class="inicio__cities-grid-text text-center">Madrid</p>
+                <div class="inicio__cities-grid-text text-center">Madrid</div>
             </a>
             <a (click)="searchCity('Valencia')"
                 class="inicio__cities-grid-column inicio__cities-grid-valencia text-decoration-none border border-1">
-                <p class="inicio__cities-grid-text text-center">Valencia</p>
+                <div class="inicio__cities-grid-text text-center">Valencia</div>
             </a>
             <a (click)="searchCity('Sevilla')"
                 class="inicio__cities-grid-column inicio__cities-grid-sevilla text-decoration-none border border-1">
-                <p class="inicio__cities-grid-text text-center">Sevilla</p>
+                <div class="inicio__cities-grid-text text-center">Sevilla</div>
             </a>
             <a (click)="searchCity('Ibiza')"
                 class="inicio__cities-grid-column inicio__cities-grid-ibiza text-decoration-none border border-1">
-                <p class="inicio__cities-grid-text text-center">Ibiza</p>
+                <div class="inicio__cities-grid-text text-center">Ibiza</div>
             </a>
             <a (click)="searchCity('Santiago de Compostela')"
                 class="inicio__cities-grid-column inicio__cities-grid-santiago text-decoration-none border border-1">
-                <p class="inicio__cities-grid-text text-center">Santiago de Compostela</p>
+                <div class="inicio__cities-grid-text text-center">Santiago de Compostela</div>
             </a>
             <a (click)="searchCity('Tenerife')"
                 class="inicio__cities-grid-column inicio__cities-grid-tenerife text-decoration-none border border-1">
-                <p class="inicio__cities-grid-text text-center">Tenerife</p>
+                <div class="inicio__cities-grid-text text-center">Tenerife</div>
             </a>
             <a (click)="searchCity('Barcelona')"
                 class="inicio__cities-grid-column inicio__cities-grid-barcelona text-decoration-none border border-1">
-                <p class="inicio__cities-grid-text text-center">Barcelona</p>
+                <div class="inicio__cities-grid-text text-center">Barcelona</div>
             </a>
         </div>
     </section>
@@ -158,19 +158,19 @@
         <div class="inicio__category-grid">
             <a (click)="searchCategory('houses')"
                 class="inicio__category-grid-column inicio__category-grid-houses text-decoration-none border border-1">
-                <p class="inicio__category-grid-text text-center">Casas y chalets</p>
+                <div class="inicio__category-grid-text text-center">Casas y chalets</div>
             </a>
             <a (click)="searchCategory('hotels')"
                 class="inicio__category-grid-column inicio__category-grid-hotels text-decoration-none border border-1">
-                <p class="inicio__category-grid-text text-center">Hoteles</p>
+                <div class="inicio__category-grid-text text-center">Hoteles</div>
             </a>
             <a (click)="searchCategory('hostels')"
                 class="inicio__category-grid-column inicio__category-grid-hostels text-decoration-none border border-1">
-                <p class="inicio__category-grid-text text-center">Albergues</p>
+                <div class="inicio__category-grid-text text-center">Albergues</div>
             </a>
             <a (click)="searchCategory('bungalows')"
                 class="inicio__category-grid-column inicio__category-grid-bungalows text-decoration-none border border-1">
-                <p class="inicio__category-grid-text text-center">Bungalows</p>
+                <div class="inicio__category-grid-text text-center">Bungalows</div>
             </a>
         </div>
     </section>
